# casebase

./: .gitignore  DEPLOY_GCP.md  Dockerfile  README.md  journal.txt  mobile-mockup.html  nav-mockup.html  pyproject.toml  sync_casebase.sh
app/: api.py  extract_experience_letter.py  extract_pwd.py  oflc_api_endpoints.py  requirements.txt
balca_perm_scraper/: config.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  OflcDashboard.jsx  OflcLanding.jsx  OflcTemplates.jsx  OflcView.jsx  VisaBulletinView.jsx  index.css
onet/: onet_ingest.py  onet_query.py
schema/: aao_schema.sql  oflc_schema.sql
scripts/ingest/: backfill_balca_outcomes.py  build_aao_citations.py  ingest_aao.py  ingest_adopted.py  ingest_all.sh  ingest_ina.py  ingest_oflc.py  ingest_policy.py  ingest_rag.py  ingest_regulations.py  ingest_supplemental_precedents.py  ingest_uscis.py
scripts/scrape/: download_oflc_data.py  download_oflc_data.sh  ina_scraper.py  ina_scraper_v1.py  scrape_precedents.py  scrape_uscis_fy2025_q4.py  scrape_visa_bulletins.py
