[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casebase"
version = "0.1.0"
description = "Casebase — Immigration law research platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI" }
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "click>=8.1.7",
  "httpx>=0.27.0",
  "pandas>=2.2.2",
  "pydantic>=2.8.2",
  "python-dateutil>=2.9.0",
  "rich>=13.7.1",
  "tenacity>=8.4.2",
  "lxml>=5.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.5",
  "mypy>=1.11.1",
]

[project.scripts]
balca-perm = "balca_perm_scraper.cli:cli"

[tool.setuptools]
packages = ["balca_perm_scraper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
